--- a/default.conf
+++ b/default.conf
@@ -9,4 +9,22 @@ server {
     index index.html index.htm;
   }
 
-} # End of Docker Nginx reverse proxy example file
+  location / {
+        return 301 https://grupo2.ettore.page$request_uri;
+    }
+
+} 
+server {
+    listen 443 default_server ssl http2;
+    listen [::]:443 ssl http2;
+
+    server_name grupo2.ettore.page;
+
+    ssl_certificate /etc/nginx/ssl/live/example.org/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/example.org/privkey.pem;
+    
+    location / {
+    	root /usr/share/nginx/html;
+      index index.html index.htm;
+    }
+}
