--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,20 @@ services:
     container_name: mesatrab
     ports:
       - "80:80"
+      - "443:443"
+    restart: always
     expose:
       - 80
+      - 443
     volumes:
       - ./default.conf:/etc/nginx/conf.d/default.conf
       - .:/usr/share/nginx/html
+      - ./certbot/www:/var/www/certbot/:ro
+      - ./certbot/conf/:/etc/nginx/ssl/:ro
+      
+  
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
