--- a/default.conf
+++ b/default.conf
@@ -20,10 +20,10 @@ server {
 
     server_name grupo2.ettore.page;
 
-    ssl_certificate /etc/nginx/ssl/live/example.org/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/example.org/privkey.pem;
+    ssl_certificate /etc/nginx/ssl/live/grupo2.ettore.page/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/grupo2.ettore.page/privkey.pem;
     
     location / {
-    	...
+    	# ...
     }
 }
