--- a/default.conf
+++ b/default.conf
@@ -2,7 +2,7 @@
 server {
   listen 80;
   listen [::]:80;
-  server_name grupo2.ettore.page;
+  server_name localhost;
 
   location / {
     root /usr/share/nginx/html;
